--- a/src/app/components/view/view.scss
+++ b/src/app/components/view/view.scss
@@ -785,7 +785,7 @@ md-menu-content{
 
 #svg {
     width: 100%;
-
+    position: relative;
     
 
     .img-wrapper {  
@@ -800,14 +800,23 @@ md-menu-content{
         .img-wrapper {  
             display: inline-block;
             vertical-align: middle;
-            width: 20px;
-            height: 20px;
             border-radius: 50%;
             transition-duration: .2s;
 
-            img[src="./img/warning.svg"] {
-                width: 20px;
-                height: 20px; 
+            .icon-box{
+                width:20px;
+                float:left;
+                border:1px solid #fff;
+                margin-right:8px;
+                height:20px;
+                text-align:center;
+                border-radius:3px; 
+
+                img{
+                    vertical-align:-webkit-baseline-middle; 
+                    width: 100%; 
+                    height: 100%;
+                }
             }
 
         }
@@ -817,6 +826,7 @@ md-menu-content{
             display: none;
             vertical-align: middle;
             padding: 5px;
+            margin-left: 8px;
             width: 150px;
             height: 30px;
             background-color: teal;
