Side pannel changes

--- a/src/app/components/view/view.html
+++ b/src/app/components/view/view.html
@@ -47,7 +47,7 @@
                                 <md-menu-content  class="select_menu">
                                     <md-menu-item >
                                         <div layout="row">
-                                            <div class="selected-icon active_catrgory"><img src="../img/setting.png"></div>
+                                            <div class="selected-icon active_catrgory"><i class="material-icons">&#xE876;</i></div>
                                             <div class="layout-label">
                                                 <p class="title_label">
                                                     <span class="category">Small</span>
@@ -70,7 +70,7 @@
                                     </md-menu-item>
                                     <md-menu-item >
                                         <div layout="row">
-                                            <div class="selected-icon"><img src="../img/setting.png"></div>
+                                            <div class="selected-icon"><i class="material-icons">&#xE876;</i></div>
                                             <div class="layout-label">
                                                 <p class="title_label">
                                                     <span class="category">Medium</span>
@@ -93,7 +93,7 @@
                                     </md-menu-item>
                                     <md-menu-item >
                                         <div layout="row">
-                                            <div class="selected-icon"><img src="../img/setting.png"></div>
+                                            <div class="selected-icon"><i class="material-icons">&#xE876;</i></div>
                                             <div class="layout-label">
                                                 <p class="title_label">
                                                     <span class="category">Large</span>
@@ -134,7 +134,7 @@
                                 <md-menu-content  class="select_menu select_date">
                                     <md-menu-item >
                                         <div layout="row">
-                                            <div class="selected-icon active_catrgory "><img src="../img/setting.png"></div>
+                                            <div class="selected-icon active_catrgory "><i class="material-icons">&#xE876;</i></div>
                                             <div class="layout-label">
                                                 <p class="title_label">
                                                     <span class="category">Daily</span>
@@ -145,7 +145,7 @@
                                     </md-menu-item>
                                     <md-menu-item >
                                         <div layout="row">
-                                            <div class="selected-icon"><img src="../img/setting.png"></div>
+                                            <div class="selected-icon"><i class="material-icons">&#xE876;</i></div>
                                             <div class="layout-label">
                                                 <p class="title_label">
                                                     <span class="category">Weekly</span>
@@ -156,7 +156,7 @@
                                     </md-menu-item>
                                     <md-menu-item >
                                         <div layout="row">
-                                            <div class="selected-icon"><img src="../img/setting.png"></div>
+                                            <div class="selected-icon"><i class="material-icons">&#xE876;</i></div>
                                             <div class="layout-label">
                                                 <p class="title_label">
                                                     <span class="category">Monthly</span>
@@ -167,7 +167,7 @@
                                     </md-menu-item> 
                                     <md-menu-item >
                                         <div layout="row">
-                                            <div class="selected-icon"><img src="../img/setting.png"></div>
+                                            <div class="selected-icon"><i class="material-icons">&#xE876;</i></div>
                                             <div class="layout-label">
                                                 <p class="title_label">
                                                     <span class="category">Quaterly</span>
@@ -178,7 +178,7 @@
                                     </md-menu-item>
                                     <md-menu-item >
                                         <div layout="row">
-                                            <div class="selected-icon"><img src="../img/setting.png"></div>
+                                            <div class="selected-icon"><i class="material-icons">&#xE876;</i></div>
                                             <div class="layout-label">
                                                 <p class="title_label">
                                                     <span class="category">Half-Yearly</span>
@@ -189,7 +189,7 @@
                                     </md-menu-item>
                                     <md-menu-item >
                                         <div layout="row">
-                                            <div class="selected-icon"><img src="../img/setting.png"></div>
+                                            <div class="selected-icon"><i class="material-icons">&#xE876;</i></div>
                                             <div class="layout-label">
                                                 <p class="title_label">
                                                     <span class="category">Yearly</span>
