--- a/src/app/components/view/view.scss
+++ b/src/app/components/view/view.scss
@@ -3,6 +3,9 @@
 @import '../../../sass/type';
 @import '../../../sass/input';
 @import '../../../sass/table';
+.push_content_div{
+    transition: 0.5s;
+}
 .trialContainer {
     padding: 0;
     padding: 60px 40px 0px;
