--- a/src/app/components/view/view.scss
+++ b/src/app/components/view/view.scss
@@ -781,6 +781,8 @@ md-nav-bar md-nav-ink-bar {
     background: rgba(0, 0, 0, 0.9);
     z-index: 3;
     text-align: center;
+    display:none;
+    transition: 0.5s;
     .overlay_content{
         width: 100%;
         height:100%;
@@ -792,6 +794,9 @@ md-nav-bar md-nav-ink-bar {
             }
         }
     }
+}
+.open_overlay{
+    display: block;
 }
 // CSS for Dynamic SVG map
 
