--- a/src/app/components/view/view.scss
+++ b/src/app/components/view/view.scss
@@ -515,7 +515,7 @@ md-nav-bar md-nav-ink-bar {
         
     }
     .svg-mapping{
-        height:440px;
+        height:calc(100vh - 194px);
         overflow-x: auto;
 
         /*svg code for snap js*/
@@ -800,37 +800,28 @@ md-nav-bar md-nav-ink-bar {
 
 #svg {
     width: 100%;
-    position: relative;
-    
+    height: 95%;
 
-    .img-wrapper {  
-        display: inline-block;
-        vertical-align: middle;
-        width: 20px;
-        height: 20px;
-        border-radius: 50%;
-        transition-duration: .2s;
-    }
     .icon-wrapper {
-        .img-wrapper {  
+        .img-wrapper {
             display: inline-block;
             vertical-align: middle;
-            border-radius: 50%;
-            transition-duration: .2s;
+            width: 30px;
+            height: 30px;
 
             .icon-box{
-                width:20px;
-                float:left;
+                display: block;
+                width:17px;
                 border:1px solid #fff;
-                margin-right:8px;
-                height:20px;
-                text-align:center;
-                border-radius:3px; 
+                margin: 6px auto;
+                height:18px;
+                text-align: center;
+                border-radius:3px;
 
                 img{
-                    vertical-align:-webkit-baseline-middle; 
-                    width: 100%; 
-                    height: 100%;
+                    vertical-align: top; 
+                    width: 90%; 
+                    height: 90%;
                 }
             }
 
@@ -840,17 +831,27 @@ md-nav-bar md-nav-ink-bar {
             box-sizing: border-box;
             display: none;
             vertical-align: middle;
-            padding: 5px;
-            margin-left: 8px;
-            width: 150px;
-            height: 30px;
-            background-color: teal;
-            border-radius: 5px;
-            z-index: 100;
+            padding: 8px;
+            width: 200px;
+            height: 36px;
+            background-color: #22221E;
+            border-radius: 3px;
 
             .dialog-text {
-                color: white;
+                color: #4a5359;
                 font-family: sans-serif;
+            }
+
+            &::after {
+                content: '';
+                display: block;
+                width: 0; 
+                height: 0; 
+                margin-top: -18px;
+                margin-left: -14px;
+                border-top: 7px solid transparent;  
+                border-bottom: 7px solid transparent; 
+                border-right:7px solid #22221E; 
             }
 
             .switch {
@@ -860,16 +861,8 @@ md-nav-bar md-nav-ink-bar {
         
 
         &:hover {
-            width: 200px;
-            .img-wrapper {
-                width: 30px;
-                height: 30px;
-                // background-color: rgba(0,0,0, 0.5);   
-
-                // img[src="./img/warning.svg"] {
-                //     // transform: scale(1.2);
-                // }
-            }
+            width: 250px;
+            
             .dialog {
                 display: inline-block;
             }          
