change width of login box

--- a/src/app/components/login/login.scss
+++ b/src/app/components/login/login.scss
@@ -22,11 +22,12 @@
             padding:150px 70px;
             md-content{
                 background: transparent;
+                width:100%;
             }
             .login_row{
                 margin:0px 0px 0px;
                 md-input-container{
-                    margin:0px;
+                    margin:0px;                    
                 }
                 label{
                     color:#d0d0d0;
