validation on login page

--- a/src/app/components/login/login.scss
+++ b/src/app/components/login/login.scss
@@ -47,6 +47,7 @@
                 .material-icons{
                     position: absolute;
                     top:6px;
+                    left:0px;
                 }
                 .login_submit{
                     width: 100%;
