--- a/src/app/components/login/login.html
+++ b/src/app/components/login/login.html
@@ -9,12 +9,12 @@
          </div>
          <div class="login_form" layout="row" layout-align="center center">
                <md-content layout-padding>
-                    <form name="loginForm">
+                    <form name="loginForm" >
                         <div class="login_row">
                             <md-input-container class="md-block" flex-gt-sm>
                                 <label class="display-none"></label>
                                 <i class="material-icons">person</i>
-                                <input type="email" placeholder="Email" name="email"  required minlength="10" maxlength="100" ng-pattern="/^.+@.+\..+$/" />
+                                <input type="email" placeholder="Email" name="email" ng-model="email"  required ng-pattern="/^.+@.+\..+$/" />
                                 <div ng-messages="loginForm.email.$error">
                                     <div ng-message="required">This field is required</div>
                                     <div ng-message="pattern">Your email must be between 10 and 100 characters long and look like an e-mail address.
@@ -26,7 +26,7 @@
                             <md-input-container class="md-block">
                                 <label class="display-none"></label>
                                 <i class="material-icons">no_encryption</i>
-                                <input placeholder="Password" type="password"  name="password" required ng-pattern="/^(?=.*[A-Za-z])(?=.*\d)(?=.*[$@$!%*#?&])[A-Za-z\d$@$!%*#?&]{8,16}$/" autocomplete="off" />
+                                <input placeholder="Password" type="password" ng-model="password"  name="password" required ng-pattern="/^(?=.*[A-Za-z])(?=.*\d)(?=.*[$@$!%*#?&])[A-Za-z\d$@$!%*#?&]{8,16}$/" autocomplete="off" />
                                 <div ng-messages="loginForm.password.$error">
                                     <div ng-message="required">This field is required</div>
                                     <div ng-message="pattern">Password should be between 8 and 16 characters long and should contain one number, one character and one special character
@@ -35,7 +35,7 @@
                             </md-input-container>
                         </div>
                         <div class="login_row">
-                            <md-button class="md-primary login_submit">Login</md-button>
+                            <md-button type="submit" class="md-primary login_submit">Login</md-button>
                         </div>
                     </form>
                </md-content>
